--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.tfstate
 *.tfstate.*
 
+# Ignore terraform dependency lock file
+.terraform.lock.hcl
+
 # Crash log files
 crash.log
 crash.*.log
@@ -32,3 +35,4 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
