SD-1632: Fix chekov checks and no double checkes modules folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Local .terraform directories
 **/.terraform/*
 
+# Ignore checkov local cache directories
+**/.external_modules/*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
