--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore DS_Store files created by macOS
+.DS_Store
